--- a/index.css
+++ b/index.css
@@ -29,15 +29,6 @@
   padding-bottom: var(--dl-space-space-tripleunit);
   justify-content: space-between;
 }
-.home-burger-menu {
-  display: none;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.home-icon {
-  width: 36px;
-  height: 36px;
-}
 .home-mobile-menu {
   top: 0px;
   left: 0px;
@@ -65,7 +56,7 @@
   align-items: flex-start;
   flex-direction: column;
 }
-.home-icon02 {
+.home-icon {
   width: 24px;
   height: 24px;
 }
@@ -338,7 +329,22 @@
   padding-bottom: var(--dl-space-space-tripleunit);
   justify-content: center;
 }
+.home-social-links {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  justify-content: center;
+}
 .home-link07 {
+  display: contents;
+}
+.home-icon02 {
+  width: 24px;
+  height: 24px;
+  margin-right: var(--dl-space-space-doubleunit);
+  text-decoration: none;
+}
+.home-link08 {
   display: contents;
 }
 .home-icon04 {
@@ -347,13 +353,7 @@
   margin-right: var(--dl-space-space-doubleunit);
   text-decoration: none;
 }
-.home-social-links {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: row;
-  justify-content: center;
-}
-.home-link08 {
+.home-link09 {
   display: contents;
 }
 .home-icon06 {
@@ -362,19 +362,10 @@
   margin-right: var(--dl-space-space-doubleunit);
   text-decoration: none;
 }
-.home-link09 {
-  display: contents;
-}
-.home-icon08 {
-  width: 24px;
-  height: 24px;
-  margin-right: var(--dl-space-space-doubleunit);
-  text-decoration: none;
-}
 .home-link10 {
   display: contents;
 }
-.home-icon10 {
+.home-icon08 {
   width: 24px;
   height: 24px;
   margin-right: var(--dl-space-space-doubleunit);
@@ -425,16 +416,6 @@
   .home-navbar {
     position: relative;
   }
-  .home-burger-menu {
-    display: flex;
-    padding: var(--dl-space-space-halfunit);
-    margin-left: var(--dl-space-space-tripleunit);
-    border-radius: var(--dl-radius-radius-radius4);
-    background-color: var(--dl-color-gray-black);
-  }
-  .home-icon {
-    fill: var(--dl-color-gray-white);
-  }
   .home-hero {
     align-items: center;
     flex-direction: row;
@@ -480,8 +461,8 @@
   }
 }
 @media(max-width: 479px) {
-  .home-burger-menu {
-    margin-left: var(--dl-space-space-doubleunit);
+  .home-container2 {
+    width: 100%;
   }
   .home-hero {
     align-items: center;
@@ -492,6 +473,8 @@
     width: 296px;
     height: 187px;
     align-self: flex-start;
+    margin-left: var(--dl-space-space-unit);
+    margin-right: var(--dl-space-space-unit);
   }
   .home-text {
     align-self: flex-end;
