--- a/index.css
+++ b/index.css
@@ -301,19 +301,13 @@
   text-align: center;
   margin-bottom: var(--dl-space-space-tripleunit);
 }
-.home-section-separator2 {
-  width: 100%;
-  height: 1px;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  background-color: var(--dl-color-gray-900);
-}
 .home-footer-container {
   width: 100%;
   display: flex;
   align-items: center;
-  padding-top: var(--dl-space-space-FourUnits);
+  padding-top: var(--dl-space-space-fourunits);
+  border-color: var(--dl-color-gray-black);
+  border-width: 0px;
   flex-direction: column;
   justify-content: center;
   background-color: var(--dl-color-gray-white);
@@ -327,6 +321,8 @@
   max-width: var(--dl-size-size-maxcontent);
   align-items: center;
   padding-top: var(--dl-space-space-tripleunit);
+  border-color: var(--dl-color-gray-black);
+  border-width: 0px;
   padding-left: var(--dl-space-space-tripleunit);
   padding-right: var(--dl-space-space-tripleunit);
   flex-direction: row;
@@ -477,9 +473,12 @@
   .home-hero-text-container {
     width: 296px;
     height: 187px;
+    margin: var(--dl-space-space-unit);
     align-self: flex-start;
+    margin-top: var(--dl-space-space-unit);
     margin-left: var(--dl-space-space-unit);
-    margin-right: var(--dl-space-space-unit);
+    margin-right: 0px;
+    margin-bottom: var(--dl-space-space-unit);
   }
   .home-text {
     align-self: flex-end;
@@ -491,7 +490,7 @@
   .home-image {
     width: 182px;
     height: 158px;
-    margin-right: var(--dl-space-space-doubleunit);
+    margin-right: var(--dl-space-space-unit);
     padding-left: 0px;
   }
   .home-features {
