--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2095,7 +2095,7 @@ input, select, textarea {
 
 			.image.thumb:hover:before {
 				background: url("images/overlay.png"), url("images/overlay.png");
-				opacity: 0.0; /* Used to be 1.0 */
+				opacity: 1.0;
 			}
 
 		.image img {
