--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2255,6 +2255,8 @@ input, select, textarea {
 		ul.actions li {
 			padding: 0 0 0 1em;
 			vertical-align: middle;
+			margin: auto;
+			width: fit-content;
 		}
 
 		ul.actions.special {
