--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,7 +97,7 @@ input, select, textarea {
 			transition: none !important;
 		}
 
-	body, input, select, textarea, markdown-container {
+	body, input, select, textarea, markdown-container, markdown-container2 {
 		color: #a2a2a2;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
